Fixed Text Align

--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -219,6 +219,11 @@ a {
       
       padding: 10px;
     }
+
+    .myStyledButton {
+      text-align: center;
+    } 
+    
   
 
 }
